# QuickShare

./: .gitignore  ARCHITECTURE.md  README.md  project.yml
core/: Cargo.toml  build.rs
core/proto/: device_to_device_messages.proto  nearby_share.proto  offline_wire_formats.proto  securemessage.proto  ukey.proto  wire_format.proto
core/src/: ffi.rs  lib.rs
core/src/discovery/: ble.rs  mdns.rs  mod.rs  utils.rs
core/src/protocol/: frame.rs  mod.rs
core/src/transfer/: connection.rs  encryption.rs  mod.rs  receiver.rs  sender.rs
macOS/: BUILD.md  Package.swift  TESTING.md  build.sh  com.quickshare.daemon.plist
macOS/Bridge/: module.modulemap  quickshare.h
macOS/ControlCenterWidget/: ControlCenterWidget.swift
macOS/QuickShareApp/: BleAdvertiser.swift  ContentView.swift  CustomSegmentedControl.swift  DeviceListView.swift  Info.plist  MdnsAdvertiser.swift  MenuBarView.swift  NetworkDiscovery.swift  ProceduralBackgroundView.swift  QuickShare.entitlements  QuickShareApp.swift  QuickShareModel.swift  SettingsView.swift  StatusBarController.swift  StatusBarDropView.swift
macOS/QuickShareApp/Assets.xcassets/AirDropIcon.imageset/: Contents.json
macOS/QuickShareApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOS/ShareExtension/: ShareExtension-Info.plist  ShareViewController.swift
macOS/Sources/CQuickShare/: CQuickShare.c
macOS/Sources/CQuickShare/include/: quickshare.h
macOS/Sources/QuickShareBridge/: Bridge.swift
macOS/Sources/QuickShareDaemon/: main.swift
