[package]
name = "quickshare-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
btleplug = "0.11"
mdns-sd = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
blake3 = "1"
mime_guess2 = "2"
prost = "0.13"
rand = "0.8"
x25519-dalek = "2.0"
libc = "0.2"

[build-dependencies]
prost-build = "0.13"

