[package]
name = "quickshare-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess2 = "2"
prost = "0.13"
rand = "0.8"
libc = "0.2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
get_if_addrs = "0.5"
hostname = "0.4"
futures = "0.3"

# Crypto — UKEY2 compatible with Google QuickShare
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

[build-dependencies]
prost-build = "0.13"
